Fix misaligned publish modal and make link horizontal scrollable

--- a/src/components/Home/ChoreoCards.css
+++ b/src/components/Home/ChoreoCards.css
@@ -180,10 +180,9 @@
   text-align: center;
   border-radius: 1em;
   padding: 0.5em 1em;
-  width: 100%;
-  overflow: hidden;
+  overflow-x: scroll;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  /*text-overflow: ellipsis;*/
 }
 
 .publish-modal .ant-modal-content {
@@ -203,7 +202,7 @@
 
 .publish-modal-inner {
   background: #131313;
-  padding: 1em;
+  padding: 2rem;
   border-radius: 1em;
   color: #fff;
   text-align: center;
